Fixed Spacing Issue with URL popup

--- a/app/assets/stylesheets/messages_page.css
+++ b/app/assets/stylesheets/messages_page.css
@@ -247,8 +247,8 @@ box-sizing: border-box;
   border: 1px solid lavender;
   width: 700px;
   height: 100px;
-  top: 920px;
-  left: 250px;
+  top: 75vh;
+  left: 15vw;
   border-radius: 7px;
   font-size: 14px;
   color: #333437;
